# Codejays

./: README.md
Image_manager/: CMakeLists.txt
Image_manager/src/: image_manager.cpp  image_manager.h  main.cpp
Image_manager/test/: image_manager_test.cpp
